# photo-frame

./: .gitignore  Dockerfile  README.md  docker-compose.yml  install.sh  pyproject.toml  run.ps1  run.sh
docker/: entrypoint.sh
photo_frame/: cache.py  config.py  config_test.py  entry.py  layout.py  main.py  renderer.py  scanner.py  scheduler.py
