[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "photo-frame"
version = "0.1.0"
description = "Slideshow photo frame for Raspberry Pi"
requires-python = ">=3.9"
dependencies = [
    # pygame is best installed via apt on Raspberry Pi OS:
    #   sudo apt install -y python3-pygame
    # On desktop/Docker it is installed from PyPI automatically.
    "Pillow>=10.0",
    "pillow-heif>=0.16",
    "pygame>=2.6",
]

[project.scripts]
photo-frame = "photo_frame.entry:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["photo_frame*"]
